# claude-code-self-reflect

./: .gitignore  .npmignore  CHANGELOG.md  CLAUDE.md  CLAUDE.md.backup-20250917-105530  Dockerfile.admin  Dockerfile.admin-api  Dockerfile.async-importer  Dockerfile.importer  Dockerfile.mcp-server  Dockerfile.narrative-worker  Dockerfile.safe-watcher  Dockerfile.streaming-importer  Dockerfile.watcher  README.md  docker-compose.yaml  package-lock.json  package.json  run-mcp-docker.sh  start-admin.sh  stop-admin.sh  test-system.py
admin-api/: .env.example  pyproject.toml  requirements.txt
admin-api/app/: main.py
admin-api/app/models/: worker.py
admin-api/app/routers/: batch.py  collections.py  dashboard.py  docker.py  imports.py  logs.py  projects.py  settings.py  workers.py
admin-api/app/services/: batch_service.py  narrative_service.py
admin-api/app/workers/: narrative_worker.py
admin-panel/: IMPLEMENTATION_SUMMARY.md  SETTINGS_IMPLEMENTATION.md  docker-entrypoint.sh  index.html  nginx.conf  package.json  pnpm-lock.yaml
docs/: collection-naming-fix-analysis.md
installer/: fastembed-fallback.js  postinstall.js  statusline-setup.js  update-manager.js
mcp-server/: pyproject.toml  run-mcp.sh  switch-mode.py  test_complete_fix.py  test_local_mode.py
scripts/: announce-release.js  ast_grep_final_analyzer.py  cc-statusline-unified.py  csr-status  debug-august-parsing.py  debug-project-resolver.py  final_analysis_report.md  final_analysis_result.json  import-conversations-unified.py  process-staged-imports.py  quality-gate-staged.py  requirements.txt  (+3 more)
(+109 files in other folders)
